Fix color distortion in dark theme
Adds a hue-rotate of 180 degrees to the top-level theme element to counteract the false colors caused by the invert function.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -721,7 +721,7 @@ input[type="number"] {
 /* dark theme */
 
 .t-dark {
-    filter: invert(1);
+    filter: invert(1) hue-rotate(180deg);
     background: #111;
     color: #222;
 }
